--- a/sites/default/themes/hot_theme/sass/base/_standards.scss
+++ b/sites/default/themes/hot_theme/sass/base/_standards.scss
@@ -17,6 +17,7 @@ a {
 h1, h2 {
 	font-family: $font-serif;
 	font-size: $font-size-biggest;
+  line-height: 1.2em;
 	margin: 40px 0;
   img {
 		margin-left: 10px;
